<resources>
    <string name="app_name">AsteroidsTMS</string>
    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomical_unit_explanation">
        The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles).
    </string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">
        This is NASA picture of day, showing nothing yet.
    </string>
    <string name="nasa_picture_of_day_content_description_format">
        NASA picture of day: %s
    </string>
    <string name="hazardous_description">Earth Hazard? %s</string>
    <string name="help_button_text">Get help on this item</string>
    <string name="text_about_app">About App</string>
    <string name="picture_of_day_detail">Picture Of the Day</string>
    <string name="status_image_view">This is smile</string>
</resources>



